--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/verified.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/thumbs-up.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My personal website"
+      content="Learn more about my education, work experience, personal projects, and general background."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +24,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Logan Jones</title>
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Logan Jones">
+    <meta itemprop="description" content="Learn more about my education, work experience, personal projects, and general background.">
+    <meta itemprop="image" content="https://github.com/logar16/my-site/blob/master/src/pages/home/profile.jpg">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://logar16.github.io/my-site">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Logan Jones">
+    <meta property="og:description" content="Learn more about my education, work experience, personal projects, and general background.">
+    <meta property="og:image" content="https://github.com/logar16/my-site/blob/master/src/pages/home/profile.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Logan Jones">
+    <meta name="twitter:description" content="Learn more about my education, work experience, personal projects, and general background.">
+    <meta name="twitter:image" content="https://github.com/logar16/my-site/blob/master/src/pages/home/profile.jpg">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
